--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@1&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,10 +24,11 @@
           </div>
         </div>
       </section>
-      <div class="container">
+      <div class="recipe">
         <div class="autocomplete"></div>
         <div id="summary"></div>
       </div>
+    <script type="text/javascript" src="config.js"></script>
     <script src="utils.js"></script>
     <script src="index.js"></script>
 </body>
